--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <td><input type="radio" value="none" name="Experience" /></td>
           </tr>
         </table>
-        <h4>Any comments, questions and  suggestions?</h4>
+        <h4>Any comments, questions or  suggestions?</h4>
         <textarea rows="5"></textarea>
         <div class="btn-block">
           <button type="submit" href="/">Send Feedback</button>
