--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <td><input type="radio" value="none" name="Price" /></td>
           </tr>
           <tr>
-            <td class="first-col">Overall Experience</td>
+            <td class="first-col"> Experience</td>
             <td><input type="radio" value="none" name="Experience" /></td>
             <td><input type="radio" value="none" name="Experience" /></td>
             <td><input type="radio" value="none" name="Experience" /></td>
